--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Game/BPGameMode.BPGameMode_C
+EditorStartupMap=/Game/DefaultMap.DefaultMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
