📝 add auto door

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,7 +79,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="FowardOrBack",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="FowardOrBack",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="FowardOrBack",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="RightOrLeft",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="RightOrLeft",Scale=1.000000,Key=D)
 DeprecatedActionAndAxisNames=()
